part 1 of manditory sides, replaced slideshow images with big chungus for now as to rid of the errors

--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -37,8 +37,7 @@
       <script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
     </div>
     <div class="mainpage">
-      <div id="content">
-      </div>
+      <div id="content"></div>
       <div id="ticketSide">
         <div class="ticket-content" id="ticketDisplay"></div>
         <div class="sticky2">
