--- a/app/static/style.css
+++ b/app/static/style.css
@@ -8,8 +8,25 @@ body {
     background-color: #000;
     min-width: 1023px;
 }
-
+p{
+  display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
 html, body { height: 100%; }
+
+h3{
+  -webkit-text-stroke: .5px grey;
+  color: white;
+  text-shadow:
+      1px 1px 0 #000,
+    -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+      1px 1px 0 #000;
+}
 
 a { color: #0252aa; text-decoration: none; cursor: pointer; }
 a:hover { text-decoration: underline; }
@@ -47,11 +64,40 @@ textarea { overflow: auto; }
 #main p { line-height: 18px; color: #9da1aa; padding-bottom: 5px; }
 #main .items { padding: 21px 0 45px 0; width: 100%; }
 
-.large-col { float: left; width: 466px; padding: 0 10px 0 0; justify-content: center;}
+.large-col { 
+  margin: 0;
+  float: left; 
+  width: 466px; 
+  padding: 0 10px 0 0; 
+  justify-content: center; 
+  padding-left: 100px; 
+}
+/* .large-col-last{ 
+  float: right;
+  width: 466px; 
+  padding: 0 10px 0 0; 
+  justify-content: center;
+  padding-left: 100px;
+} */
 .large-col .a-link { padding-top: 7px; }
 
-.small-col {width: 226px; padding-right: 15px; display: inline-block;}
-.items {text-align: center;}
+.small-col {
+  border-radius: 15px 50px;
+  width: 226px; 
+  padding-right: 15px; 
+  box-shadow: 0 6px 8px 0 purple;
+  transition: 0.3s;
+  background-color: whitesmoke;
+  border: solid 2px purple;
+}
+
+.items {
+  text-align: center;
+  float: left;
+  padding: 0 10px;
+  width: 30%;
+  display: grid;
+}
 
 .carousel-inner > .item > img,
     .carousel-inner > .item > a > img {
