--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -122,8 +122,9 @@
           <div class="large-col">
             <h2>Who We Are?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Stibulum at tellus viverra nulla aliquam pulvinar. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Maecenas nulla arcu, venenatis et ultrices id, tincidunt ut nisl. Etiam augue lectus,Lorem ipsum dolor</p>
+            <img src="images/cornerstore-staff.jpeg" alt="Coley Family">
           </div>
-          <div class="large-col last">
+          <div class="large-col-last">
             <h2>Today's Special</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id molestie enim. Suspendisse consequat urna non ante gravida euismod. In in nibh nulla. Vestibulum at tellus viverra nulla aliquam pulvinar.</p>
             
@@ -145,7 +146,6 @@
               <p>"Best frog legs I've had in a while. I will be back!"</p>
             </div>
           </div>
-        <div class="items">
           <div class="rewiew-box">
             <div class="small-col last">
               <h3>Matt-Kat says</h3>
