--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -28,10 +28,15 @@
       <a class="Btn" name="sides">Sides</a>
       <a class="Btn" name="salads">Salads</a>
       <a class="Btn" name="starters">Starters</a>
+      <a class="Btn" name="seafood" id="seafood">Seafood</a>
     </div>
-    <div class="sidesError">Please select all sides before checkout"</div>
+    <div class="sidesError">Please select all sides before checkout</div>
+    <div class="afterHoursError">
+      We do not take online orders after 7 PM. Sorry for the inconvinience.
+    </div>
     <div id="checkoutBox">
-      <div id="totalBox"></div>
+      <h1 id="totalBox"></h1>
+      <h1>Your order will be ready in about 45 minutes!</h1>
       <div id="paypal-button-container"></div>
 
       <!-- Include the PayPal JavaScript SDK -->
