Same functionality, shorter code
broke some code into functions to shorten the length and make it easier to read

--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -20,7 +20,8 @@
         <i class="fa fa-caret-down"></i>
       </a>
       <a class="checkoutbtn" onclick="openCheckout()">Checkout</a>
-      <a class="cartbtn" onclick="ticketToggle()">Cart</a>
+      <a class="cartbtn">Cart</a>
+      {% comment %} add onclick="ticketToggle()" {% endcomment %}
     </nav>
     <div class="dropdown-content" id="myDropdown">
       <a class="Btn" name="small">Small</a>
