--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -20,12 +20,11 @@
         <i class="fa fa-caret-down"></i>
       </a>
       <a class="checkoutbtn" onclick="openCheckout()">Checkout</a>
-      <a class="cartbtn">Cart</a>
-      {% comment %} add onclick="ticketToggle()" {% endcomment %}
+      <a class="cartbtn" onclick="ticketToggle()">Cart</a>
     </nav>
     <div class="dropdown-content" id="myDropdown">
-      <a class="Btn" name="small">Small</a>
-      <a class="Btn" name="big">Big</a>
+      <a class="Btn" name="small">Burgers and More</a>
+      <a class="Btn" name="big">Plates</a>
       <a class="Btn" name="sides">Sides</a>
       <a class="Btn" name="salads">Salads</a>
       <a class="Btn" name="starters">Starters</a>
