--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -53,6 +53,8 @@
       </div>
     </div>
     <script>
+      var players = "{{menu}}";
+      console.log(players);
       paypal
         .Buttons({
           // Set up the transaction
