--- a/app/static/admin.css
+++ b/app/static/admin.css
@@ -1,3 +1,11 @@
+body {
+  font-size: 12px;
+  line-height: 1.3;
+  font-family: arial, sans-serif;
+  color: white;
+  background-color: #000;
+  min-width: 1023px;
+}
 nav {
   overflow: hidden;
   font-family: Arial, Helvetica, sans-serif;
