--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{% static 'style.css' %}"/>
-  <script src="{% static 'script.js' %}"></script>
+    <script src="{% static 'script.js' %}"></script>
+    <script src="{% static 'calendar.js' %}"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
   </head>
   <body>
     <div id="wrapper">
@@ -155,6 +158,8 @@
           <div class="cl">&nbsp;</div>
         </div>
       </div>
+  {% include  "calendar.html" %}
+      
 
 
 
