--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -54,7 +54,9 @@
     </div>
     <script>
       var players = "{{menu}}";
-      console.log(players);
+      for (const item in players) {
+        console.log(item);
+      }
       paypal
         .Buttons({
           // Set up the transaction
