Fixed Calendar days

--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -33,6 +33,6 @@
       </div>
     </div>
 
-    <script src="{% static 'calendar.css' %}"></script>
+    <script src="{% static 'calendar.js' %}"></script>
   </body>
 </html>
