homepage and signup changes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,31 +49,17 @@
           <div class="carousel-inner" role="listbox">
       
             <div class="item active">
-                <a href="https://github.com/LoganColey/EverestGameCenter" target="_blank"><img src="{% static 'images/bigchungus.png' %}" width="200" height="250" alt="Arcade" class="center"> </a>
+                <img src="{% static 'images/storefront.jpg' %}" width="200" height="250" alt="Arcade" class="center"> 
           
             </div>
       
             <div class="item">
-                <a href="https://github.com/LoganColey/DiceAndMangement" target="_blank"><img src="{% static 'images/bigchungus.png' %}" width="200" height="250" alt="DnM" class="center"> </a>
-              <div class="carousel-caption">
-                <h3>Dice and Management</h3>
-                <p>A DnD player and monster creator where users can share their creations with other users and comment on their creations.</p>
-              </div>
+                <img src="{% static 'images/inside-store.jpg' %}" width="200" height="250" alt="DnM" class="center"> 
+              
             </div>
           
             <div class="item">
-                <a href="https://github.com/LoganColey/Unit1" target="_blank"><img src="{% static 'images/bigchungus.png' %}" width="200" height="250" alt="Unit1Project" class="center"> </a>
-              <div class="carousel-caption">
-                <h3>Asunder</h3>
-                <p>Asunder is my 1st unit project based off of Dante's Inferno but, as a rouge-like rpg.  It was helped made with Rylee Chisholm. Essentially the gameplay boils down to the player going to different floors to gain levels and loot to fight bosses and win.  We never fully completed the game due to the one week period we had to complete it but we are looking forward to finishing it in the future.</p>
-              </div>
-            </div>
-      
-            <div class="item">
-                <a href="https://github.com/LoganColey/Unit2_Project" target="_blank"><img src="{% static 'images/bigchungus.png' %}" width="200" height="250" alt="Unit2Project" class="center"> </a>
-              <div class="carousel-caption">
-                <h3>Pokemon Safari Park</h3>
-                <p>Pokemon Safari Park was a quick Pokemon experience.  You would first pick your starting Pokemon and then go catch pokemon to catch different pokemon and fight at the battle towers to get access to the secret legendary pokemon.  We feel like wwe could do more with the game maybe add a save file and also add evos for pokemon as well.</p>
+                <img src="{% static 'images/dad-pic.jpeg' %}" width="200" height="250" alt="Unit1Project" class="dad-pic">
               </div>
             </div>
         
