Till view added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -142,7 +142,11 @@
           <div class="cl">&nbsp;</div>
         </div>
       </div>
-      
+    {% for event in events %}
+      <p>{{event.name}}</p>
+      <p>{{event.description}}</p>
+      <p>{{event.date}}</p>
+
 
 
 
