added delete events to admin

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -15,6 +15,7 @@
   <body>
     <nav>
       <a href="{% url 'home' %}" title="Home">Home</a>
+      <a href="{% url 'deleteEvent '%}">Delete Events</a>
       <h1>Welcome Susan</h1>
     </nav>
     <div id="pageContentDiv">
