added back the correct views

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -15,7 +15,9 @@
   <body>
     <nav>
       <a href="{% url 'home' %}" title="Home">Home</a>
-      <a href="{% url 'deleteEvent '%}">Delete Events</a>
+      <a href="{% url 'deleteEvent' %}">Delete Events</a>
+      <a href="{% url 'tillView' %}">View Tills</a>
+
       <h1>Welcome Susan</h1>
     </nav>
     <div id="pageContentDiv">
