--- a/app/templates/till.html
+++ b/app/templates/till.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     {% for till in tills%}
-        <p>{% till.date %}</p>
-        <p>{% till.amount %}</p>
+        <p>{{ till.date }}</p>
+        <p>{{ till.amount }}</p>
     {% endfor %}
 
   </body>
