--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -45,15 +45,13 @@
     <div class="mainpage">
       <div id="content">
         {% for item in menu %}
-        <div id="itemBox" class="{{item.type}}">
-          <h2 class="itemName">{{item.name}}</h2>
-          <p class="itemDesc">{{item.description}}</p>
-          <h2 class="itemPrice">$ {{item.cost}}</h2>
-          <button
-            style="width: 60px; height: 20px; font-size: 14px" type="submit" href="{% url 'addToCart' item.name %}"
-          >
-            +
-          </button>
+         <div id="itemBox" class="{{item.type}}">
+            <h2 class="itemName">{{item.name}}</h2>
+            <p class="itemDesc">{{item.description}}</p>
+            <h2 class="itemPrice">$ {{item.cost}}</h2>
+            <button class="noOrdersBtn">
+              <a href="{% url 'addToCart' item.name %}">Add to Cart</a>
+            </button>
         </div>
         {% endfor %}
       </div>
