--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -49,13 +49,28 @@
             <h2 class="itemName">{{item.name}}</h2>
             <p class="itemDesc">{{item.description}}</p>
             <h2 class="itemPrice">$ {{item.cost}}</h2>
-            <button class="noOrdersBtn">
-              <a href="{% url 'addToCart' item.name %}">Add to Cart</a>
-            </button>
+            <button>
+              <a href="{% url 'addToCart' item.name %}">Add to Cart</a></button>
         {% endfor %}
       </div>
       <div id="ticketSide">
-        <div class="ticket-content" id="ticketDisplay"></div>
+        <div class="ticket-content" id="ticketDisplay">
+          {% for item in cart %}
+          <div class="ticketItem">
+            <h2 class="itemName">{{item.name}}</h2>
+            {% if item.type == "big"%}
+            <button>add in the dropdown</button><button>add in the dropdown</button>
+            {% endif %}
+            {% if item.type == "small"%}
+            <button>Add in the dropdown</button>
+            {% endif %}
+            <h2 class="itemPrice">{{item.cost}}</h2>
+            <button>
+              <a href="{% url 'removeFromCart' item.id %}">Remove</a>
+            </button>
+          </div>
+          {% endfor %}
+        </div>
         <div class="sticky2">
           <h2 id="total">Total: $0.00</h2>
           <div class="placeBtn"></div>
