--- a/app/templates/food.html
+++ b/app/templates/food.html
@@ -9,7 +9,7 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="{% static 'food-style.css' %}" />
+    <link rel="stylesheet" href="{% static 'food-style.css' %}"/>
     <title>Food</title>
   </head>
   <body onload="checkDateTime()">
@@ -33,7 +33,7 @@
     </div>
     <div class="sidesError">Please select all sides before checkout</div>
     <div class="afterHoursError">
-      We do not take online orders after 7 PM. Sorry for the inconvinience.
+      We do not take online orders after 7 PM. Sorry for the inconvenience.
     </div>
     <div id="checkoutBox">
       <h1 id="totalBox"></h1>
